# VibeSpotAI

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  VibeSpot_ProductConcept.docx  context.md  docker-compose.yml
REsources/stitch_vibespot_local_experience_intelligence/kinetic_noir/: DESIGN.md
REsources/stitch_vibespot_local_experience_intelligence/vibe_check_achievement_moment_1/: code.html
REsources/stitch_vibespot_local_experience_intelligence/vibe_check_achievement_moment_2/: code.html
apps/mobile/: App.tsx  app.json  package-lock.json  package.json
apps/prototype/: package-lock.json  package.json
docs/: api-examples.md  conventions.md
docs/architecture/: 00-architecture-decisions.md  01-local-docker-infra.md  02-backend-design.md  03-data-search-ai.md  README.md
scripts/: smoke-local.ps1
services/api/: Dockerfile  pyproject.toml
services/api/app/: main.py
services/api/app/api/routes/: auth.py  places.py  profiles.py
services/api/app/core/: config.py  response.py  trace.py
services/api/app/db/: models.py  session.py
services/api/app/db/migrations/: env.py
services/api/app/db/migrations/versions/: 0001_initial.py  0002_auth_sessions.py
services/api/app/jobs/: __init__.py  summary_jobs.py
services/api/app/schemas/: auth.py  place.py  profile.py
services/api/app/scripts/: seed.py
services/api/app/services/: auth_service.py  places_service.py  profile_service.py
services/api/tests/: test_auth_profile_api.py  test_error_envelopes.py  test_health.py  test_places_api.py  test_summary_jobs.py
tools/: phone-api-proxy.mjs
(+56 files in other folders)
